fix search bar css and center aligning status column

--- a/src/app/modules/home/dashboard/dashboard.component.scss
+++ b/src/app/modules/home/dashboard/dashboard.component.scss
@@ -1,10 +1,10 @@
 .dashboard-wrapper {
-    .ride-progress {
+    .ride-progress-container {
         padding: 24px 48px;
         margin-bottom: 32px;
         border-radius: 32px;
 
-        .left-progress {
+        .ride-progress {
             .bold-text {
                 font: normal normal 600 20px/27px Open Sans;
             }
@@ -66,13 +66,9 @@
             }
 
             .create-ride-btn {
-                width: 20%;
                 max-width: 154px;
                 height: 48px;
                 margin-top: 4px;
-                &.mat-button-disabled {
-                    opacity: 0.4;
-                }
             }
         }
 
